--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
 .nav-bar {
     height: 70px;
     width: 100%;
-    background-color: #77EEEE;
+    /*background-color: #77EEEE;*/
+    background-color: yellow;
     position: fixed;
     z-index: 10;
     top: 0;
