--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@ body {
 .nav-bar {
     height: 70px;
     width: 100%;
-    /*background-color: #77EEEE;*/
-    background-color: yellow;
+    background-color: #77EEEE;
     position: fixed;
     z-index: 10;
     top: 0;
